2003-05-06  Chris Dunlap  <cdunlap@llnl.gov>

	* src/etc/munge.init, src/libcommon/munge_defs.h, src/munged/conf.c,
	  src/munged/munged.c: Added munged F cmdline opt and daemon support.

	* src/munged/random.c(random_init): Added "seeding in progress" msg.

2003-05-03  Chris Dunlap  <cdunlap@llnl.gov>

	* HISTORY: Added.

	* src/munged/msg_server.c(err_v1_process_msg):
	  Fixed sending err msg with no body, but need to revisit this routine.

2003-05-02  Chris Dunlap  <cdunlap@llnl.gov>

	* : Removed dprintf() due to an interpositioning bug with a
	  GNU extension function named dprintf() -- who knew?!?

	* : Read PACKAGE/VERSION info from META file.

	* src/munge/munge.c, src/munge/unmunge.c, src/munged/conf.c:
	  Added V cmdline opt.

	* src/munge/unmunge.c(main): Fixed invalid read of free'd memory.

	* src/libmunge/decode.c(decode_rsp_v1):
	  Fixed dataless cred decode to match header (ie, no data is malloc'd).
	  Fixed overwrite of returned data buffer.

2003-04-30  Chris Dunlap  <cdunlap@llnl.gov>

	* : Released 0.1.

	* munge.spec: Tweaked description, pre/post/preun/postun, files.

	* : Added 'distclean-local' hook via Make-inc.mk.

	* : Added startup script.

2003-04-29  Chris Dunlap  <cdunlap@llnl.gov>

	* : Fixed compiler warnings under RH62 w/o -Wall.

2003-04-25  Chris Dunlap  <cdunlap@llnl.gov>

	* src/libmunge/munge.h, src/libmunge/strings.c, src/munged/enc_v1.c,
	  src/munged/lookup.c: Removed "half-mac" work-in-progress.

	* src/munge/munge.c, src/munge/unmunge.c: Tweaked "list" output.

	* src/munge/munge.c: Added c/C/m/M/z/Z cmdline opts.

	* src/munge/unmunge.c: Added t cmdline opt for setting TTL.
	  Added ENCODED, DECODED, CIPHER, MAC, ZIP metadata keys.

	* src/libmunge/munge.h, src/libmunge/ctx.c: Tweaked MUNGE_OPT_* enums.

	* src/libmunge/Makefile.am, src/libmunge/Makefile.in,
	  src/libmunge/strings.c: Added descriptive string arrays for enums.

2003-04-24  Chris Dunlap  <cdunlap@llnl.gov>
